# promgen-k8s

./: .gitignore  .pylintrc  .style.yapf  .travis.yml  CHANGELOG.md  Pipfile  README.md  example-generator.py  example-prometheus-stub.yml  pyproject.toml  requirements.txt  setup.py
.github/: renovate.json5
.github/workflows/: ci.yml
promgen_k8s/: __init__.py  cadvisor_job.py  cluster.py  generator.py  ingresses_job.py  nodes_job.py  pods_job.py  prom_dsl.py  service_endpoints_job.py  services_job.py
tests/: promgen_k8s_test.py
tests/__snapshots__/: promgen_k8s_test.ambr
tests/snapshots/: snap_promgen_k8s_test.py
